// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontMatter should parse front matter 1`] = `
"<h1>Hello World</h1>
"
`;

exports[`FrontMatter should tokenize front matter 1`] = `
Array [
  Object {
    "type": "front-matter",
    "value": Array [
      Object {
        "key": "title",
        "keyValue": "Hello World",
      },
    ],
  },
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# Hello World",
    "setext": false,
    "tokens": Array [
      Object {
        "raw": "Hello World",
        "type": "text",
        "value": "Hello World",
      },
    ],
    "type": "heading",
    "value": "Hello World",
  },
  Object {
    "type": "new-line",
  },
]
`;

exports[`FrontMatter should tokenize front matter with array, number and object 1`] = `
Array [
  Object {
    "type": "front-matter",
    "value": Array [
      Object {
        "key": "title",
        "keyValue": "Hello World",
      },
      Object {
        "key": "array",
        "keyValue": Array [
          1,
          2,
          3,
        ],
      },
      Object {
        "key": "object",
        "keyValue": "{a: 1, b: 2}",
      },
    ],
  },
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# Hello World",
    "setext": false,
    "tokens": Array [
      Object {
        "raw": "Hello World",
        "type": "text",
        "value": "Hello World",
      },
    ],
    "type": "heading",
    "value": "Hello World",
  },
  Object {
    "type": "new-line",
  },
]
`;
